--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -3,7 +3,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/primaryDark"
     android:gravity="center">
 
     <RelativeLayout
@@ -26,9 +26,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="New App"
+                android:textColor="@color/secondaryLight"
+                android:text="news up"
                 android:textSize="40dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="-30dp"
             />
             <TextView
                 android:layout_width="match_parent"
@@ -37,7 +38,7 @@
                 android:textSize="16dp"
                 android:text="Get the latest news here"
                 android:layout_marginTop="5dp"
-                android:textColor="#80848D"
+                android:textColor="@color/white"
             />
         </LinearLayout>
 
@@ -54,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="14dp"
-                android:textColor="#80848D"
+                android:textColor="@color/white"
                 android:text="Made By Vijul Shah"/>
         </LinearLayout>
 
